ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-route
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path : /api/v1.0/user/
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path : /api/v1.0/auth/
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path : /.well-known/jwks
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
